[metadata]
name = 
url = 
author =
author_email = 
description = 
long_description = file: README.md
license = 

[options]
zip_safe = False
python_requires = >= 3.8
install_requires =
    kivy

[options.extras_require]
dev =
    black
    flake8
    flake8-commas
    flake8-docstrings
    flake8-logging-format
    isort
    mypy
    nox


[bdist_wheel]
universal = 1
